--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </tr>
         <tr>
             <td>주간8교시 <br>16:00~
-                16:50</td>
+                16:30</td>
             <td></td>
             <td>이산수학</td>
             <td></td>
@@ -108,6 +108,9 @@
         </tr>
     </table>
 
+    <div>
+        <img src="img/KakaoTalk_20221115_195455343.jpg" alt="">
+    </div>
 </body>
 
 </html>
