김단아 교수님 목록

--- a/index.html
+++ b/index.html
@@ -108,12 +108,8 @@
            
         </tr>
     </table>
-
-
-    <div>
-        <img src="img/KakaoTalk_20221115_195455343.jpg" alt="">
-    </div>
-
+    <h1>교수님</h1>
+    <img src="https://w.namu.la/s/2c0d6ccaff0c7719743ea150920ee42cbf7a155b5a37cc3b705123e6c8acdcb72b22c0d494345b7847d65709dc9b2dce2fff9a4d1d41b5ebf76f1f066d95709138dc4031823205e3089854fd55f2a9c4dfd8dfe90845254e8c15f6e2245fb69ffc578951b5b84fc8d34cce78542d6e87" alt="">
 </body>
     
 
