이미지추가

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
     </table>
     <h1>교수님</h1>
     <img src="https://w.namu.la/s/2c0d6ccaff0c7719743ea150920ee42cbf7a155b5a37cc3b705123e6c8acdcb72b22c0d494345b7847d65709dc9b2dce2fff9a4d1d41b5ebf76f1f066d95709138dc4031823205e3089854fd55f2a9c4dfd8dfe90845254e8c15f6e2245fb69ffc578951b5b84fc8d34cce78542d6e87" alt="">
+    <img src="https://entertainimg.kbsmedia.co.kr/cms/uploads/PERSON_20220718124211_33ff93a09252603aa816492071b6154f.jpg" alt="김태리">
+    <img src="https://post-phinf.pstatic.net/MjAxOTA0MjZfMjg1/MDAxNTU2MjQ1MTA3Mjky.24m39V0sHP4G7h_FOWBNveX5H-nDGNZu7nIJoPayvS4g.-xga7PDpRXdjpHMwxmvtz8ANxr6QkKtScSB4YYazicMg.JPEG/BZ8A9904-2.jpg?type=w1200" alt="송강">
 </body>
     
 
