--- a/index.html
+++ b/index.html
@@ -108,8 +108,12 @@
            
         </tr>
     </table>
-    <h1>교수님</h1>
-    <img src="https://w.namu.la/s/2c0d6ccaff0c7719743ea150920ee42cbf7a155b5a37cc3b705123e6c8acdcb72b22c0d494345b7847d65709dc9b2dce2fff9a4d1d41b5ebf76f1f066d95709138dc4031823205e3089854fd55f2a9c4dfd8dfe90845254e8c15f6e2245fb69ffc578951b5b84fc8d34cce78542d6e87" alt="">
+    <h1>교수님 목록</h1>
+    <div>
+        <img src="https://w.namu.la/s/2c0d6ccaff0c7719743ea150920ee42cbf7a155b5a37cc3b705123e6c8acdcb72b22c0d494345b7847d65709dc9b2dce2fff9a4d1d41b5ebf76f1f066d95709138dc4031823205e3089854fd55f2a9c4dfd8dfe90845254e8c15f6e2245fb69ffc578951b5b84fc8d34cce78542d6e87" alt="">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjEwMjBfMjE1%2FMDAxNjY2MjM2Mzg0NDk2.fwXwYVmOETCxg-U2pf7TCY0-Ff6ACB3ozpqCK5FsUO8g.Mp3-9lqp8sKbVp3VZedclFDoLS876WNL3lFonSukIyEg.JPEG.call110926%2FInternet%25A3%25DF20221020%25A3%25DF121504%25A3%25DF11.jpeg&type=sc960_832" alt="">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjA1MTRfMjI2%2FMDAxNjUyNTI5MTUyNjA2.dNc5b5kAHmiiGGANaKUyvj_LvVN3okzhdh2rlO038oIg.DxmPYRBXjg8AC0AwDnU7qeY2DVGN6L0uyidS1eq9qcAg.JPEG.nwowolf%2F20220514_115747.jpg&type=sc960_832" alt="">
+    </div>
 </body>
     
 
