박훈명 - 로고넣기

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <a href="https://www.dit.ac.kr/kr/?ref=aHR0cHM6Ly93d3cuZ29vZ2xlLmNvbS8%3D" target="_blank"><img class="logo" src="https://mblogthumb-phinf.pstatic.net/MjAxNzA1MTRfMjg2/MDAxNDk0NzQ3Mzc0Mzk1.JxVfvvyBrSSu8AxQD_2Snj73vhOhkVY5a_TQTAiGWaEg.NwgcifC3b8dVdtFb9Vlc1C1NtLiZ-CrjjfcojMOxGD4g.GIF.kmu2333/19._%EB%8F%99%EC%9D%98%EA%B3%BC%ED%95%99%EB%8C%80_%EB%A1%9C%EA%B3%A0.gif?type=w800" alt=""></a>
     <H1>2022년도 1학년 2학기 시간표</H1>
     <h3>컴퓨터 정보과</h3>
     <h5>202231900 박훈명</h5>
