김단아소감문

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
         <th>소감</th>
 
         <tr>
-            <td></td>
-            <td></td>
+            <td>201866270 김단아</td>
+            <td>서로 풀 푸시를 하며 과제 진행 과정을 확인하는게 재미있었다. </td>
         </tr>
 
         <tr>
