--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@
         <th>소감</th>
 
         <tr>
-            <td></td>
-            <td></td>
+            <td>202231900 박훈명</td>
+            <td>이번 과제를 통해서 협업이 어떤 방식으로 진행되는지 알게 되었고, 지금 배운 걸 이용해서 현재 프론트엔드 조별 과제에도
+                활용 중이라서 많은 도움이 되고 있습니다!
+            </td>
         </tr>
 
         <tr>
